<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">贴吧签到助手</string>
    <string name="copyright">Copyright © 2011 &#8211; 2014 Zulwi Studio. All Rights Reserved.</string>
    <string name="setting">设置</string>
    <string name="edit_site">站点域名</string>
    <string name="edit_username">助手账号</string>
    <string name="edit_password">助手密码</string>
    <string name="login">登录</string>
    <string name="title_activity_edit_sites">站点管理</string>
    <string name="sites_list">站点列表</string>
    <string name="del_list">清空列表</string>
    <string name="add_site">添加站点</string>
    <string name="site_name">站点名称</string>
    <string name="site_domain">站点域名</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="user_info">账号</string>
    <string name="sign_log">记录</string>
    <string name="site_post">站点公告</string>
    <string name="plugin">插件</string>
    <string name="block_id">循环封禁</string>
    <string name="navigation_drawer_open">打开菜单</string>
    <string name="navigation_drawer_close">关闭菜单</string>
    <string name="icon">图标</string>
    <string name="loading">加载中,请稍后&#8230;</string>
    <string name="blank"></string>
    <string name="male">♂</string>
    <string name="female">♀</string>
    <string name="age">岁</string>
    <string name="years">年吧龄</string>
    <string name="total_count">共有</string>
    <string name="piece">个</string>
    <string name="tieba">贴吧</string>
    <string name="email">邮箱</string>
    <string name="no_tieba">未关注任何贴吧</string>
    <string name="loading_tiebas">共有 0 个贴吧</string>
    <string name="loading_follows">共关注 0 人</string>
    <string name="loading_fans">共有 0 人关注我</string>
    <string name="one_key_sign_title">一键签到</string>
    <string name="one_key_sign_tips">使用手机网络签到以减缓站点压力，可能会耗费手机流量</string>
    <string name="sign_remind">签到提醒</string>
    <string name="clear_cache">清除缓存</string>
    <string name="faq">帮助</string>
    <string name="donate">赞助</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    <string name="version_num">1.0.0 α</string>
    <string name="release">发布日期</string>
    <string name="release_date">2014年6月2日</string>
    <string name="author">作者</string>
    <string name="author_name">Jerry Locke</string>
    <string name="baidu_class_author">百度接口</string>
    <string name="baidu_class_author_name">星弦雪</string>
    <string name="app_test">测试</string>
    <string name="app_tester">linzian</string>
    <string name="blog">博客</string>
    <string name="blog_url">http://jerrys.me</string>
    <string name="group">团队</string>
    <string name="studio_name">著微工作室</string>
    <string name="edit_account">管理账号</string>
    <string name="logout">注销当前账号</string>
    <string name="show_more">显示更多</string>
    <string name="shrink_list">收缩列表</string>
    <string name="maimeng">⊙ω⊙</string>
    <string name="bind_tips">你的助手账号还未和度娘绑定在一起呢</string>
    <string name="bind_now">>> 现在绑定</string>
    <string name="bind_baidu">绑定百度账号</string>
    <string name="bd_username">百度账号</string>
    <string name="bd_password">百度密码</string>
    <string name="bd_band_tip">我们不会保存您的账号信息，但无法保证助手站点不会盗用您的 Cookie，这可能会有潜在的风险</string>
    <string name="bd_checkbox_risk">我已经知道这可能会有潜在的风险</string>
    <string name="bd_checkbox_free">我已经知道这是完全免费的</string>
    <string name="vcode">验证码</string>
    <string name="pre_date">前一天</string>
    <string name="next_date">后一天</string>
    <string name="no_log">没有记录</string>
    <string name="supported_plugin">该站点支持的插件</string>
    <string name="add_account">添加账号</string>
    <string name="switch_account">切换</string>

</resources>