<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:splitMotionEvents="false" >

        <TextView
            android:id="@+id/setting_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/list_item"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/sign_remind"
            android:textColor="@drawable/site_list_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/setting_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_bottom"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/clear_cache"
            android:textColor="@drawable/site_list_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/setting_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_bottom"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/faq"
            android:textColor="@drawable/site_list_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/setting_donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_bottom"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/donate"
            android:textColor="@drawable/site_list_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/setting_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_bottom"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/about"
            android:textColor="@drawable/site_list_text"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>