<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ListView
        android:id="@+id/siteList"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="0sp"
        android:scrollbars="vertical" >
    </ListView>

    <EditText
        android:id="@+id/addSiteName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/site_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/addSiteUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/site_domain"
        android:inputType="textUri" />

    <Button
        android:id="@+id/addSite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:onClick="addSite"
        android:text="@string/add_site"
        android:textColor="#fff" />

</LinearLayout>