<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:splitMotionEvents="false"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/setting_userinfo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/list_item"
        android:padding="10dp" >

        <com.zulwi.tiebasigner.view.CircularImage
            android:id="@+id/setting_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/setting_username"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/setting_avatar"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical|left"
            android:text="@string/user_info"
            android:textColor="@drawable/site_list_text"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/setting_email"
            android:layout_width="wrap_content"
            android:layout_alignLeft="@id/setting_username"
            android:layout_below="@id/setting_username"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|left"
            android:text="@string/email"
            android:textColor="@drawable/site_list_text"
            android:textSize="12sp" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_siteinfo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/list_item"
        android:padding="10dp" >

        <TextView
            android:id="@+id/setting_sitename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical|left"
            android:text="@string/site_name"
            android:textColor="@drawable/site_list_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/setting_siteurl"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@id/setting_sitename"
            android:layout_below="@id/setting_sitename"
            android:gravity="center_vertical|left"
            android:text="@string/site_domain"
            android:textColor="@drawable/site_list_text"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>