<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/login"
            android:scaleType="centerCrop"
            android:src="@drawable/login_banner" />

        <Spinner
            android:id="@+id/site"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="20sp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:hint="@string/edit_username"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/blue_button"
            android:onClick="doLogin"
            android:text="@string/login"
            android:textColor="#fff" />
    </LinearLayout>

</ScrollView>